--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "dev-rw-phone",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "RW Phone Number",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "lint": "eslint .",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc mocha ./test/* --exit",
-    "fix-lint": "eslint . --fix"
+    "fix-lint": "eslint . --fix",
+    "build": "tsc",
+    "prepare": "npm run build"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -35,5 +41,8 @@
   "bugs": {
     "url": "https://github.com/MutabaziAlleluia/dev-rw-phone/issues"
   },
-  "homepage": "https://github.com/MutabaziAlleluia/dev-rw-phone#readme"
+  "homepage": "https://github.com/MutabaziAlleluia/dev-rw-phone#readme",
+  "dependencies": {
+    "typescript": "^4.4.2"
+  }
 }
